@@ -247,9 +247,11 @@
           (let* ((rtype (second type))
                  (itype (if (cddr type) (third type) rtype)))
             (unless (eq rtype '*)
+              (setq rtype (upgraded-complex-part-type rtype))
               (when (eq final-rtype '*) (setq final-rtype 'REAL))
               (setq final-rtype `(AND ,final-rtype ,rtype)))
             (unless (eq itype '*)
+              (setq itype (upgraded-complex-part-type itype))
               (when (eq final-itype '*) (setq final-itype 'REAL))
               (setq final-itype `(AND ,final-itype ,itype))))))
       (if (or (and (not (eq final-rtype '*)) (subtypep final-rtype 'NIL))
@@ -278,12 +280,12 @@
           (when
             (and (or (eq rtype2 '*)
                      (subtypep (if (eq rtype1 '*) 'REAL `(AND REAL ,rtype1))
-                               rtype2))
+                               (upgraded-complex-part-type `(AND REAL ,rtype2))))
                  (or ; shortcut to avoid calling subtypep a second time
                      (and (eq itype1 rtype1) (eq itype2 rtype2))
                      (eq itype2 '*)
                      (subtypep (if (eq itype1 '*) 'REAL `(AND REAL ,itype1))
-                               itype2)))
+                               (upgraded-complex-part-type `(AND REAL ,itype2)))))
             (yes))))
       (when try-prove-no
         ;; It's too hard to prove a (no) if there is more than one type2.
@@ -311,12 +313,12 @@
                         (if (eq rtype2 '*)
                           (values t t)
                           (subtypep (if (eq rtype1 '*) 'REAL `(AND REAL ,rtype1))
-                                    rtype2))
+                                    (upgraded-complex-part-type `(AND REAL ,rtype2))))
                       (multiple-value-bind (isubis isubknown)
                           (if (eq itype2 '*)
                             (values t t)
                             (subtypep (if (eq itype1 '*) 'REAL `(AND REAL ,itype1))
-                                      itype2))
+                                      (upgraded-complex-part-type `(AND REAL ,itype2))))
                         (when (or (and rsubknown (not rsubis)
                                        iemptyknown (not iemptyis))
                                   (and isubknown (not isubis)
