@@ -131,7 +131,7 @@ T
 
 ;; depends on (UPGRADED-COMPLEX-PART-TYPE FLOAT)
 (TYPEP #C(2.2 3) (QUOTE (COMPLEX FLOAT)))
-T
+#+CLISP NIL #-CLISP T
 
 (TYPEP #C(2 3) (QUOTE (COMPLEX SYMBOL)))
 ERROR
@@ -142,9 +142,9 @@ T
 (TYPEP '#(A B C D) (QUOTE (VECTOR * 4)))
 T
 
-;; depends on (UPGRADED-COMPLEX-PART-TYPE '(EQL 0)) ?
+;; depends on (UPGRADED-COMPLEX-PART-TYPE '(EQL 0))
 (TYPEP #C(0 1) '(COMPLEX (EQL 0)))
-#+CLISP T #+(or CMU SBCL) T #-(or CLISP CMU SBCL) UNKNOWN
+#+CLISP NIL #+(or CMU SBCL) T #-(or CLISP CMU SBCL) UNKNOWN
 
 #| ; depends on (upgraded-array-element-type 'SYMBOL) !
  (TYPEP '#(A B C D) (QUOTE (VECTOR SYMBOL 4)))
